[gd_scene load_steps=2 format=3 uid="uid://cg2ch8yn4qy1r"]

[ext_resource type="Script" uid="uid://ddgge0hxf3b5d" path="res://UI/menu.gd" id="1_0h2wq"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0h2wq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
text = "Start"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Start")
text = "Quit"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 488.0
offset_top = 168.0
offset_right = 672.0
offset_bottom = 224.0
disabled = true
text = "Bug Game*"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
